MGDSTRM-8995: implement feature flag for topic config policy